# docs/swagger.json
@@ -17,27 +17,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/login": {
-            "post": {
-                "description": "check ID and Password",
-                "tags": [
-                    "User"
-                ],
-                "summary": "Login",
-                "parameters": [
-                    {
-                        "description": "annoying",
-                        "name": "login_info",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.loginInfo"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/product/{name}/{stock}": {
             "get": {
                 "tags": [
@@ -63,28 +42,20 @@
                 "responses": {}
             }
         },
-        "/signup": {
-            "post": {
-                "description": "Post user info for sign up into DB",
+        "/test": {
+            "get": {
+                "description": "Test get list",
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
-                    "User"
+                    "Test"
                 ],
-                "summary": "Sign up",
-                "parameters": [
-                    {
-                        "description": "User infomation",
-                        "name": "Info",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.User"
-                        }
-                    }
-                ],
+                "summary": "Test List",
                 "responses": {}
             }
         },
-        "/test": {
+        "/test1": {
             "get": {
                 "description": "Test get list",
                 "tags": [
@@ -94,8 +65,13 @@
                 "responses": {}
             }
         },
-        "/{id}": {
+        "/user/info/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get User Info from DB",
                 "tags": [
                     "User"
@@ -108,6 +84,97 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/user/login": {
+            "post": {
+                "description": "Check ID and Password\nPassword secure by bcrypt",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "ID and Password",
+                        "name": "ID\u0026PWD",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/utils.LoginInfo"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/user/signup": {
+            "post": {
+                "description": "Post user info for sign up into DB",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Sign up",
+                "parameters": [
+                    {
+                        "description": "User infomation",
+                        "name": "INFO",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/vender/login": {
+            "post": {
+                "description": "Check ID and Password\nPassword secure by bcrypt",
+                "tags": [
+                    "Vender"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "ID and Password",
+                        "name": "ID\u0026PWD",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/utils.LoginInfo"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/vender/signup": {
+            "post": {
+                "description": "vender sign up",
+                "tags": [
+                    "Vender"
+                ],
+                "summary": "vender sign up",
+                "parameters": [
+                    {
+                        "description": "vender info",
+                        "name": "INFO",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/vender.Vender"
+                        }
                     }
                 ],
                 "responses": {}
@@ -135,7 +202,7 @@
                 }
             }
         },
-        "user.loginInfo": {
+        "utils.LoginInfo": {
             "type": "object",
             "properties": {
                 "id": {
@@ -145,6 +212,40 @@
                     "type": "string"
                 }
             }
+        },
+        "vender.Vender": {
+            "type": "object",
+            "properties": {
+                "addr": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "OAuth protects our entity endpoints",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
