# main.go
@@ -6,19 +6,22 @@ import (
 	swagger "github.com/arsmn/fiber-swagger/v2"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
-	"github.com/gofiber/fiber/v2/middleware/csrf"
 	"github.com/gofiber/fiber/v2/middleware/recover"
-	"github.com/yusong-offx/myshoppingmall/database"
 	_ "github.com/yusong-offx/myshoppingmall/docs"
-
-	"github.com/yusong-offx/myshoppingmall/route/info"
-	"github.com/yusong-offx/myshoppingmall/route/product"
 	"github.com/yusong-offx/myshoppingmall/route/user"
+	"github.com/yusong-offx/myshoppingmall/route/vender"
+	"github.com/yusong-offx/myshoppingmall/utils"
 )
 
 // @title Fiber Example API
 // @version 1.0
 // @description This is a sample swagger for Fiber
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+// @description OAuth protects our entity endpoints
+
 // @termsOfService http://swagger.io/terms/
 // @contact.name API Support
 // @contact.email fiber@swagger.io
@@ -31,31 +34,33 @@ func main() {
 	app := fiber.New()
 
 	// Database connect
-	err := database.Connect()
+	err := utils.Connect()
 	if err != nil {
 		log.Fatal(err.Error())
 	}
-	defer database.DB.Close()
+	defer utils.DB.Close()
 
 	// Middleware
+	// app.Use(csrf.New())
 	app.Use(cors.New())
-	app.Use(csrf.New())
 	app.Use(recover.New())
 
 	// Swagger
 	app.Get("/swagger/*", swagger.HandlerDefault)
-	app.Get("/test", info.Test)
-	app.Get("/test1", info.Test1)
 
 	// Package
 	// User
-	app.Post("/login", user.LoginPost)
-	app.Post("/signup", user.SignUpPost)
-	app.Get("/:id", user.UserGet)
+	G_user := app.Group("/user")
+	G_user.Post("/login", user.UserLogin)
+	G_user.Post("/signup", user.UserSignUp)
+	G_user.Get("/info/:id", utils.JWTmiddleware, user.UserGet)
 
-	// Product
-	app.Get("/product/:name/:stock", product.ItemGet)
+	// Vender
+	G_vender := app.Group("/vender")
+	G_vender.Post("/login", vender.VenderLogin)
+	G_vender.Post("/signup", vender.VenderSignUp)
 
 	// Open server
 	log.Fatal(app.Listen("localhost:8080"))
+
 }
